Add CONNECTIVITY SECTION

--- a/index-text.html
+++ b/index-text.html
@@ -1015,6 +1015,328 @@
 		</div>
 	</div>
 </section>
+
+
+			<!-- Main Content Section: Details and Form -->
+			<section class="bg-white py-16 sm:py-24">
+				<div class="container mx-auto px-4">
+					<div
+						class="grid grid-cols-1 lg:grid-cols-2 gap-12 lg:gap-16 items-start"
+					>
+						<!-- Left Column: Contact Details -->
+						<div class="space-y-10">
+							<!-- Location -->
+							<div>
+								<h2 class="text-2xl font-bold text-brand-teal mb-4">
+									Location
+								</h2>
+								<div class="flex items-start gap-3">
+									<div
+										class="bg-brand-green-light size-8 flex items-center justify-center rounded-full mr-1 text-brand-green-darker"
+									>
+										<i class="ti ti-map-pin"></i>
+									</div>
+									<p class="text-gray-700">
+										IQ City Road Durgapur I District – Burdwan West Bengal I
+										Pin: - 713206
+									</p>
+								</div>
+							</div>
+							<!-- Connect -->
+							<div>
+								<h2 class="text-2xl font-bold text-brand-teal mb-4">Connect</h2>
+								<div class="space-y-4">
+									<!-- Item -->
+									<div class="flex items-center gap-3">
+										<div
+											class="bg-brand-green-light size-8 flex items-center justify-center rounded-full mr-1 text-brand-green-darker"
+										>
+											<i class="ti ti-phone"></i>
+										</div>
+										<p class="text-gray-700 w-32">Corperate Desk</p>
+										<a
+											class="font-semibold text-brand-text hover:text-brand-teal"
+											href="tel:8945524353"
+											>8945524353</a
+										>
+									</div>
+									<!-- Item -->
+									<div class="flex items-center gap-3">
+										<div
+											class="bg-brand-green-light size-8 flex items-center justify-center rounded-full mr-1 text-brand-green-darker"
+										>
+											<i class="ti ti-phone"></i>
+										</div>
+										<p class="text-gray-700 w-32">OPD</p>
+										<a
+											class="font-semibold text-brand-text hover:text-brand-teal"
+											href="tel:3432608000"
+											>3432608000</a
+										>
+									</div>
+									<!-- Item -->
+									<div class="flex items-center gap-3">
+										<div
+											class="bg-brand-green-light size-8 flex items-center justify-center rounded-full mr-1 text-brand-green-darker"
+										>
+											<i class="ti ti-phone"></i>
+										</div>
+										<p class="text-gray-700 w-32">Admission Desk</p>
+										<a
+											class="font-semibold text-brand-text hover:text-brand-teal"
+											href="tel:8170009555"
+											>8170009555</a
+										>
+									</div>
+									<!-- Item -->
+									<div class="flex items-center gap-3">
+										<div
+											class="bg-brand-green-light size-8 flex items-center justify-center rounded-full mr-1 text-brand-green-darker"
+										>
+											<i class="ti ti-phone"></i>
+										</div>
+										<p class="text-gray-700 w-32">Emergency</p>
+										<a
+											class="font-semibold text-brand-text hover:text-brand-teal"
+											href="tel:9800508000"
+											>9800508000</a
+										>
+									</div>
+									<!-- Item -->
+									<div class="flex items-center gap-3">
+										<div
+											class="bg-brand-green-light size-8 flex items-center justify-center rounded-full mr-1 text-brand-green-darker"
+										>
+											<i class="ti ti-phone"></i>
+										</div>
+										<p class="text-gray-700 w-32">Health Check Up</p>
+										<a
+											class="font-semibold text-brand-text hover:text-brand-teal"
+											href="tel:3432608000"
+											>3432608000</a
+										>
+									</div>
+									<!-- Item -->
+									<div class="flex items-center gap-3">
+										<div
+											class="bg-brand-green-light size-8 flex items-center justify-center rounded-full mr-1 text-brand-green-darker"
+										>
+											<i class="ti ti-phone"></i>
+										</div>
+										<p class="text-gray-700 w-32">Special clinic</p>
+										<a
+											class="font-semibold text-brand-text hover:text-brand-teal"
+											href="tel:7477792010"
+											>7477792010</a
+										>
+									</div>
+								</div>
+							</div>
+
+							<!-- Follow Us -->
+							<div>
+								<h2 class="text-2xl font-bold text-brand-teal mb-4">
+									Follow Us
+								</h2>
+								<div class="flex items-center gap-3">
+									<a
+										href="#"
+										class="w-8 h-8 flex items-center justify-center bg-brand-green-light rounded-full text-brand-teal hover:bg-brand-teal hover:text-white transition-colors"
+										><svg
+											width="18"
+											height="18"
+											viewBox="0 0 18 18"
+											fill="none"
+											xmlns="http://www.w3.org/2000/svg"
+										>
+											<path
+												d="M10.5925 2.39478C9.70458 2.39478 8.85305 2.74749 8.22522 3.37532C7.59738 4.00316 7.24467 4.85468 7.24467 5.74257V7.60648H5.45315C5.36339 7.60648 5.29028 7.67886 5.29028 7.76934V10.2304C5.29028 10.3202 5.36267 10.3933 5.45315 10.3933H7.24467V15.4421C7.24467 15.5319 7.31706 15.605 7.40754 15.605H9.86862C9.95838 15.605 10.0315 15.5326 10.0315 15.4421V10.3933H11.8389C11.9135 10.3933 11.9786 10.3426 11.9967 10.2702L12.612 7.80915C12.6181 7.78514 12.6186 7.76006 12.6135 7.73582C12.6084 7.71159 12.5978 7.68883 12.5826 7.66929C12.5674 7.64975 12.5479 7.63393 12.5257 7.62305C12.5034 7.61216 12.479 7.6065 12.4542 7.60648H10.0315V5.74257C10.0315 5.6689 10.046 5.59595 10.0742 5.52789C10.1024 5.45983 10.1437 5.39799 10.1958 5.3459C10.2479 5.2938 10.3097 5.25248 10.3778 5.22429C10.4458 5.1961 10.5188 5.18159 10.5925 5.18159H12.4745C12.5642 5.18159 12.6373 5.1092 12.6373 5.01872V2.55764C12.6373 2.46788 12.565 2.39478 12.4745 2.39478H10.5925Z"
+												fill="#7DA83A"
+											/>
+										</svg>
+									</a>
+									<a
+										href="#"
+										class="w-8 h-8 flex items-center justify-center bg-brand-green-light rounded-full text-brand-teal hover:bg-brand-teal hover:text-white transition-colors"
+										><svg
+											width="18"
+											height="18"
+											viewBox="0 0 18 18"
+											fill="none"
+											xmlns="http://www.w3.org/2000/svg"
+										>
+											<path
+												d="M13.1165 2.53076L9.50011 6.66466L6.37309 2.53076H1.84253L7.25474 9.6071L2.12555 15.4695H4.32171L8.28043 10.9455L11.7404 15.4695H16.1573L10.5157 8.01101L15.3112 2.53076H13.1165ZM12.3463 14.1558L4.4064 3.77506H5.71149L13.5623 14.155L12.3463 14.1558Z"
+												fill="#7DA83A"
+											/>
+											<path d="M6 3.5H4L11.5 14.5H14.5L6 3.5Z" fill="#7DA83A" />
+										</svg>
+									</a>
+									<a
+										href="#"
+										class="w-8 h-8 flex items-center justify-center bg-brand-green-light rounded-full text-brand-teal hover:bg-brand-teal hover:text-white transition-colors"
+										><svg
+											width="18"
+											height="18"
+											viewBox="0 0 18 18"
+											fill="none"
+											xmlns="http://www.w3.org/2000/svg"
+										>
+											<path
+												d="M9.74399 1.76147C10.5583 1.76365 10.9716 1.76799 11.3285 1.77812L11.4689 1.78319C11.6311 1.78898 11.791 1.79622 11.9843 1.80491C12.7545 1.8411 13.28 1.9627 13.7411 2.14149C14.2188 2.32535 14.6213 2.57436 15.0237 2.97609C15.3919 3.33782 15.6768 3.77556 15.8583 4.25875C16.0371 4.71984 16.1587 5.24535 16.1949 6.01625C16.2036 6.20879 16.2108 6.36876 16.2166 6.53163L16.221 6.67206C16.2318 7.02819 16.2362 7.44151 16.2376 8.25584L16.2383 8.79583V9.74407C16.2401 10.272 16.2346 10.8 16.2217 11.3278L16.2174 11.4683C16.2116 11.6311 16.2043 11.7911 16.1956 11.9837C16.1594 12.7545 16.0364 13.2793 15.8583 13.7412C15.6768 14.2243 15.3919 14.6621 15.0237 15.0238C14.662 15.392 14.2243 15.6769 13.7411 15.8584C13.28 16.0372 12.7545 16.1588 11.9843 16.195L11.4689 16.2167L11.3285 16.2211C10.9716 16.2312 10.5583 16.2363 9.74399 16.2377L9.204 16.2384H8.25648C7.72826 16.2403 7.20004 16.2347 6.67198 16.2218L6.53155 16.2174C6.35972 16.2109 6.18792 16.2034 6.01617 16.195C5.246 16.1588 4.72049 16.0372 4.25867 15.8584C3.77574 15.6768 3.33826 15.3919 2.97674 15.0238C2.60826 14.6622 2.32318 14.2244 2.14142 13.7412C1.96263 13.2801 1.84102 12.7545 1.80483 11.9837L1.78311 11.4683L1.77949 11.3278C1.76615 10.8 1.76012 10.272 1.7614 9.74407V8.25584C1.75939 7.72786 1.7647 7.19988 1.77732 6.67206L1.78239 6.53163C1.78818 6.36876 1.79542 6.20879 1.80411 6.01625C1.8403 5.24535 1.9619 4.72056 2.14069 4.25875C2.32288 3.77536 2.60846 3.33761 2.97746 2.97609C3.33877 2.60805 3.776 2.32323 4.25867 2.14149C4.72049 1.9627 5.24528 1.8411 6.01617 1.80491C6.20872 1.79622 6.36941 1.78898 6.53155 1.78319L6.67198 1.77885C7.1998 1.76599 7.72778 1.76044 8.25576 1.7622L9.74399 1.76147ZM8.99987 5.38071C8.03999 5.38071 7.11942 5.76202 6.44069 6.44076C5.76195 7.1195 5.38064 8.04007 5.38064 8.99995C5.38064 9.95983 5.76195 10.8804 6.44069 11.5591C7.11942 12.2379 8.03999 12.6192 8.99987 12.6192C9.95975 12.6192 10.8803 12.2379 11.5591 11.5591C12.2378 10.8804 12.6191 9.95983 12.6191 8.99995C12.6191 8.04007 12.2378 7.1195 11.5591 6.44076C10.8803 5.76202 9.95975 5.38071 8.99987 5.38071ZM8.99987 6.82841C9.28504 6.82836 9.56743 6.88448 9.83091 6.99357C10.0944 7.10265 10.3338 7.26257 10.5355 7.46418C10.7372 7.66579 10.8972 7.90516 11.0063 8.1686C11.1155 8.43205 11.1717 8.71442 11.1718 8.99959C11.1718 9.28476 11.1157 9.56715 11.0066 9.83063C10.8975 10.0941 10.7376 10.3335 10.536 10.5352C10.3344 10.7369 10.095 10.8969 9.83158 11.0061C9.56814 11.1152 9.28577 11.1714 9.0006 11.1715C8.42467 11.1715 7.87233 10.9427 7.46509 10.5355C7.05784 10.1282 6.82906 9.57588 6.82906 8.99995C6.82906 8.42402 7.05784 7.87168 7.46509 7.46444C7.87233 7.05719 8.42467 6.82841 9.0006 6.82841M12.8008 4.29494C12.5608 4.29494 12.3307 4.39027 12.161 4.55995C11.9913 4.72964 11.896 4.95978 11.896 5.19975C11.896 5.43972 11.9913 5.66986 12.161 5.83955C12.3307 6.00923 12.5608 6.10456 12.8008 6.10456C13.0408 6.10456 13.2709 6.00923 13.4406 5.83955C13.6103 5.66986 13.7056 5.43972 13.7056 5.19975C13.7056 4.95978 13.6103 4.72964 13.4406 4.55995C13.2709 4.39027 13.0408 4.29494 12.8008 4.29494Z"
+												fill="#7DA83A"
+											/>
+										</svg>
+									</a>
+									<a
+										href="#"
+										class="w-8 h-8 flex items-center justify-center bg-brand-green-light rounded-full text-brand-teal hover:bg-brand-teal hover:text-white transition-colors"
+										><svg
+											width="18"
+											height="18"
+											viewBox="0 0 18 18"
+											fill="none"
+											xmlns="http://www.w3.org/2000/svg"
+										>
+											<path
+												fill-rule="evenodd"
+												clip-rule="evenodd"
+												d="M8.99995 3.20923C9.61884 3.20923 10.2537 3.22515 10.8689 3.25121L11.5957 3.28596L12.2913 3.32722L12.9427 3.37137L13.5378 3.4177C14.1836 3.46684 14.7913 3.74229 15.254 4.19554C15.7166 4.64879 16.0045 5.25076 16.0669 5.89543L16.0958 6.20306L16.1501 6.86176C16.2008 7.54435 16.2384 8.28847 16.2384 9.00001C16.2384 9.71155 16.2008 10.4557 16.1501 11.1383L16.0958 11.797L16.0669 12.1046C16.0045 12.7494 15.7165 13.3514 15.2537 13.8047C14.7909 14.258 14.183 14.5333 13.537 14.5823L12.9435 14.6279L12.292 14.6728L11.5957 14.7141L10.8689 14.7488C10.2463 14.7758 9.62317 14.7898 8.99995 14.7908C8.37673 14.7898 7.75361 14.7758 7.13098 14.7488L6.40423 14.7141L5.70862 14.6728L5.05715 14.6279L4.46215 14.5823C3.81634 14.5332 3.20859 14.2577 2.74594 13.8045C2.28329 13.3512 1.99542 12.7493 1.93303 12.1046L1.90407 11.797L1.84978 11.1383C1.79465 10.4268 1.76519 9.71359 1.76147 9.00001C1.76147 8.28847 1.79911 7.54435 1.84978 6.86176L1.90407 6.20306L1.93303 5.89543C1.99539 5.25088 2.28316 4.649 2.74566 4.19576C3.20817 3.74253 3.81575 3.467 4.46143 3.4177L5.05571 3.37137L5.70717 3.32722L6.40351 3.28596L7.13025 3.25121C7.75313 3.22423 8.37649 3.21023 8.99995 3.20923ZM7.55226 7.24468V10.7553C7.55226 11.0898 7.91418 11.2982 8.20372 11.1317L11.2439 9.37641C11.31 9.33833 11.365 9.28349 11.4032 9.2174C11.4414 9.15132 11.4615 9.07634 11.4615 9.00001C11.4615 8.92368 11.4414 8.84869 11.4032 8.78261C11.365 8.71653 11.31 8.66169 11.2439 8.62361L8.20372 6.869C8.13767 6.83087 8.06276 6.8108 7.98649 6.81082C7.91023 6.81083 7.83532 6.83092 7.76929 6.86907C7.70326 6.90722 7.64844 6.96209 7.61034 7.02815C7.57224 7.09421 7.55221 7.16914 7.55226 7.2454V7.24468Z"
+												fill="#7DA83A"
+											/>
+										</svg>
+									</a>
+								</div>
+							</div>
+						</div>
+
+						<!-- Right Column: Contact Form -->
+						<div class="bg-brand-green-light p-8 rounded-2xl shadow-lg">
+							<h2 class="text-2xl font-bold text-brand-teal mb-6">
+								Get in touch
+							</h2>
+							<form action="#" method="POST" class="space-y-5">
+								<input
+									type="text"
+									placeholder="Enter the First Name*"
+									class="form-input"
+								/>
+								<input
+									type="email"
+									placeholder="Enter the Email ID*"
+									class="form-input"
+								/>
+								<input
+									type="tel"
+									placeholder="Enter the Mobile Number*"
+									class="form-input"
+								/>
+								<input
+									type="text"
+									placeholder="Enter the Subject*"
+									class="form-input"
+								/>
+								<textarea
+									placeholder="Write your Message*"
+									rows="5"
+									class="form-input"
+								></textarea>
+								<div>
+									<button type="submit" class="form-submit">Submit Form</button>
+								</div>
+							</form>
+						</div>
+					</div>
+				</div>
+				
+			</section>
+
+		<!-- ======================================================= -->
+<!-- NEARBY CONNECTIVITY SECTION (REVISED & ROBUST) -->
+<!-- ======================================================= -->
+<section class="py-16 sm:py-24">
+    <div class="container mx-auto px-4">
+    <!-- Connectivity Grid -->
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-y-12 md:gap-x-8">
+            
+            <!-- Item 1: Airport -->
+            <div class="flex flex-col">
+                <!-- Header: Icon and Time -->
+                <div class="flex items-center gap-4">
+                    <i class="ti ti-plane-inflight text-3xl text-brand-teal"></i>
+                    <span class="font-bold text-lg text-gray-800">25 mins (18.9 km)</span>
+                </div>
+                <!-- Divider Line -->
+                <div class="w-full h-px bg-gray-300 my-4"></div>
+                <!-- Timeline Body -->
+                <div class="flex">
+                    <!-- Column 1: The graphic (circles and line) -->
+                    <div class="flex flex-col items-center mr-4">
+                        <div class="w-4 h-4 rounded-full bg-white border-2 border-gray-400 flex-shrink-0"></div>
+                        <div class="w-px flex-grow bg-gray-400"></div>
+                        <div class="w-4 h-4 rounded-full bg-red-600 border-2 border-white ring-2 ring-red-600 flex-shrink-0"></div>
+                    </div>
+                    <!-- Column 2: The text content -->
+                    <div class="flex flex-col justify-between">
+                         <p class="text-gray-600 pb-12">Kazi Nazrul Islam Airport(Andal)</p>
+                         <p class="font-semibold text-gray-800">IQ City Medical College Hospital</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Item 2: Railway Station -->
+            <div class="flex flex-col">
+                <!-- Header: Icon and Time -->
+                <div class="flex items-center gap-4">
+                    <i class="ti ti-train text-3xl text-brand-teal"></i>
+                    <span class="font-bold text-lg text-gray-800">29 mins (14.3 km)</span>
+                </div>
+                <!-- Divider Line -->
+                <div class="w-full h-px bg-gray-300 my-4"></div>
+                <!-- Timeline Body -->
+                <div class="flex">
+                    <!-- Column 1: The graphic (circles and line) -->
+                    <div class="flex flex-col items-center mr-4">
+                        <div class="w-4 h-4 rounded-full bg-white border-2 border-gray-400 flex-shrink-0"></div>
+                        <div class="w-px flex-grow bg-gray-400"></div>
+                        <div class="w-4 h-4 rounded-full bg-red-600 border-2 border-white ring-2 ring-red-600 flex-shrink-0"></div>
+                    </div>
+                    <!-- Column 2: The text content -->
+                    <div class="flex flex-col justify-between">
+                         <p class="text-gray-600 pb-12">Durgapur Railway Station</p>
+                         <p class="font-semibold text-gray-800">IQ City Medical College Hospital</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Item 3: Bus Terminus -->
+            <div class="flex flex-col">
+                <!-- Header: Icon and Time -->
+                <div class="flex items-center gap-4">
+                    <i class="ti ti-bus text-3xl text-brand-teal"></i>
+                    <span class="font-bold text-lg text-gray-800">15 mins (7.7 km)</span>
+                </div>
+                <!-- Divider Line -->
+                <div class="w-full h-px bg-gray-300 my-4"></div>
+                <!-- Timeline Body -->
+                <div class="flex">
+                    <!-- Column 1: The graphic (circles and line) -->
+                    <div class="flex flex-col items-center mr-4">
+                        <div class="w-4 h-4 rounded-full bg-white border-2 border-gray-400 flex-shrink-0"></div>
+                        <div class="w-px flex-grow bg-gray-400"></div>
+                        <div class="w-4 h-4 rounded-full bg-red-600 border-2 border-white ring-2 ring-red-600 flex-shrink-0"></div>
+                    </div>
+                    <!-- Column 2: The text content -->
+                    <div class="flex flex-col justify-between">
+                         <p class="text-gray-600 pb-12">Durgapur Bus Terminus (City Centre)</p>
+                         <p class="font-semibold text-gray-800">IQ City Medical College Hospital</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
 		</main>
 
 <!-- START: Corrected Footer Section -->
