--- a/index.html
+++ b/index.html
@@ -1574,7 +1574,7 @@
     </div>
 
 </footer>
-<div class="text-lg! prose-sm md:absolute"></div>
+<div class="text-lg! prose-sm md:absolute aspect-[4/3]"></div>
 <div class="text-xl! text-accent-yellow -left-14 -right-14"></div>    
 <!-- END: Corrected Footer Section -->
 <!-- END: New Footer Section -->
