--- a/press-corner.html
+++ b/press-corner.html
@@ -775,13 +775,13 @@
 						>
 							<a
 								href="/"
-								class="text-center w-full lg:w-auto block px-4 py-2 font-semibold bg-brand-teal rounded-lg text-white border-2 border-brand-teal"
+								class="text-center w-full lg:w-auto block px-4 py-2 border-2 font-semibold rounded-lg bg-brand-teal text-white border-brand-teal"
 							>
 								Press Corner
 							</a>
 							<a
 								href="/"
-								class="text-center w-full lg:w-auto block px-4 py-2 font-semibold bg-brand-green-light text-black rounded-lg border-2 border-white/25"
+								class="text-center w-full lg:w-auto block px-4 py-2 font-semibold bg-brand-green-light text-black border-white/25"
 							>
 								Advertisement
 							</a>
@@ -834,34 +834,25 @@
 						</div>
 						<div class="space-y-6">
 							<div
-								class="bg-white rounded-xl grid md:grid-cols-3 grid-cols-1 overflow-hidden"
+								class="bg-white rounded-xl grid md:grid-cols-12 grid-cols-1 overflow-hidden"
 							>
-								<div class="md:col-span-1">
+								<div class="md:col-span-5">
 									<img
 										src="assets/images/press-image.jpg"
 										alt="Two medical students"
-										class="w-full h-full object-cover"
+										class="w-full h-full max object-cover"
 									/>
 								</div>
-								<div class="md:col-span-2">
-									<div class="py-4 px-6">
-										<h3
-											class="text-xl lg:text-2xl font-bold text-brand-text mb-4"
-										>
-											IQ City Medical College Hospital opens First-Ever Baby
-											feeding Room in a hospital in the region of Paschim
-											Burdwan to celebrate
-										</h3>
-										<p class="text-md lg text-zinc-600 leading-4 mb-4">
-											8th May, 2022, IQ City Medical College Hospital, Durgapur
-											Here’s a good news for nursing mothers visiting IQ City
-											Medical College and Hospital, a breast/baby feeding room
-											has been inaugurated today within the hospital...8th May,
-											2022, IQ City Medical College Hospital, Durgapur Here’s a
-											good news for nursing mothers visiting IQ City Medical
-											College and Hospital, a breast/baby feeding room has been
-											inaugurated today within the hospital..
-										</p>
+								<div class="md:col-span-7">
+									<div class="py-4 px-6 h-full flex flex-col justify-between">
+										<div>
+											<h3
+												class="text-xl lg:text-2xl font-bold text-brand-text mb-4"
+											>
+												a
+											</h3>
+											<p class="text-md lg text-zinc-600 leading-4 mb-4">a</p>
+										</div>
 										<div
 											class="pt-2 flex flex-col sm:flex-row sm:items-center sm:justify-between gap-4 border-t border-gray-200"
 										>
