--- a/events.html
+++ b/events.html
@@ -802,32 +802,32 @@
 									<!-- Populated with 9 cards for demonstration -->
 									<!-- Card 1 -->
 									<div
-										class="bg-white p-4 rounded-xl border-2 border-brand-green-light"
+										class="bg-white p-4 rounded-xl border border-brand-green-light flex flex-col justify-between"
 									>
-										<div
-											class="bg-gray-50 p-6 rounded-lg mb-4 flex justify-center items-center aspect-video"
-										>
+										<div class="flex-1">
 											<img
 												src="assets/images/logo.png"
 												alt="Event Logo"
-												class="h-24 object-contain"
+												class="w-full aspect-[4/3] object-cover rounded-lg mb-4"
 											/>
+											<h3 class="font-bold text-brand-text mb-2">
+												Fire safety training IQ CITY
+											</h3>
+											<p class="text-xs text-gray-600 line-clamp-3 mb-3">
+												In a remarkable demonstration of corporate social
+												responsibility, IQ City Medical College Hospita... In a
+												remarkable demonstration of corporate social
+												responsibility, IQ City Medical College Hospita...
+											</p>
 										</div>
-										<h3 class="font-bold text-brand-text">
-											Fire safety training IQ CITY
-										</h3>
-										<p class="text-xs text-gray-600 mt-2 leading-relaxed">
-											In a remarkable demonstration of corporate social
-											responsibility, IQ City Medical College Hospita...
-										</p>
 										<div
-											class="mt-4 pt-3 border-t border-gray-200 flex justify-between items-center"
+											class="border-t pt-3 border-gray-200 flex justify-between items-center"
 										>
 											<span class="text-xs text-gray-500">9 May 2025</span
 											><a
 												href="#"
 												class="text-xs font-semibold text-brand-teal hover:underline"
-												>Read More →</a
+												>Read More</a
 											>
 										</div>
 									</div>
